--- a/views/index.hbs
+++ b/views/index.hbs
@@ -15,7 +15,7 @@
   {{#each everything}}
                   <tr>
                       <td>
-                        <h1>{{@key}}  <a   href="/course/{{this._id}}">{{this.courseName}}</a></h1>
+                        <h1><a   href="/course/{{this._id}}">{{this.courseName}}</a></h1>
                       </td>
                   </tr>
   {{/each}}
